[gd_scene load_steps=6 format=3 uid="uid://552lcmaw725k"]

[ext_resource type="Script" path="res://scripts/weapons/gnade_launcher.gd" id="1_6e41b"]
[ext_resource type="PackedScene" uid="uid://jfldn5en3yec" path="res://prefabs/projectile/GnadeProjectile.tscn" id="2_hktbs"]
[ext_resource type="Texture2D" uid="uid://cjuem3jfqwld5" path="res://assets/icons/weapon/rocket.png" id="2_wo1fs"]
[ext_resource type="Texture2D" uid="uid://dfohcqlfpvj26" path="res://Textures/Map/gun.png" id="3_ov4uf"]
[ext_resource type="AudioStream" uid="uid://c42i3ytbpptsy" path="res://assets/sounds/sfx/granade_launching.wav" id="5_uq66n"]

[node name="GnadeLauncher" type="Node2D"]
script = ExtResource("1_6e41b")
_id = "wp__grande"
display_name = "Granade Launcher"
image = ExtResource("2_wo1fs")
projectileScene = ExtResource("2_hktbs")
recoil = 100
weapon_type = 5
description = "Throw a rocket even thought its name is granade
The distant vary based on player speed"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(35, 0)
scale = Vector2(0.5, 0.504)
texture = ExtResource("3_ov4uf")
region_enabled = true
region_rect = Rect2(216, 264, 144, 64)

[node name="ProjectileSpawnLocation" type="Marker2D" parent="."]
position = Vector2(72, 0)

[node name="Timer" type="Timer" parent="."]

[node name="GunSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_uq66n")

[connection signal="timeout" from="Timer" to="." method="on_timer_timeout"]
